@@ -2,6 +2,13 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+*portage-2.0.49-r4 (10 Sep 2003): Fixes
+
+  10 Sep 2003; Nicholas Jones <carpaski@gentoo.org> *: Added the facility
+  to incorporate binary package use flags when calculating deps. Changes in
+  -r2 and -r3 included quick fixes to SELinux code and the addition of
+  LINGUAS to USE_EXPAND.
+
 *portage-2.0.49-r1 (25 Aug 2003): Fixes
 
   25 Aug 2003; Nicholas Jones <carpaski@gentoo.org> emerge: -K traceback fix.
